  . Added "glob" stream wrapper. (Marcus)
  . Added "params" as optional parameter for stream_context_create(). (Sara)
  . Added ability to use stream wrappers in include_path. (Gregory, Dmitry)

- Improved OpenSSL extension: (Dmitry)
  . Added support for OpenSSL digest and cipher functions.
  . Added access to internal values of DSA, RSA and DH keys.

- Improved SOAP extension:
  . Added support for element names in context of XMLShema's <any>. (Dmitry)
  . Added ability to use Traversable objects instead of plain arrays.
   (Joshua Reese, Dmitry)
  . Fixed possible crash bug caused by an uninitialized value. (Zdash Urf)

- Improved SPL extension:
  . Added SPL to list of standard extensions that cannot be disabled. (Marcus)
  . Added ability to store associative information with objects in
    SplObjectStorage. (Marcus)
  . Added ArrayAccess support to SplObjectStorage. (Marcus)
  . Added SplDoublyLinkedList, SplStack, SplQueue classes. (Etienne)
  . Added FilesystemIterator. (Marcus)
  . Added GlobIterator. (Marcus)
  . Added SplHeap, SplMinHeap, SplMaxHeap, SplPriorityQueue classes. (Etienne)
  . Added new parameter $prepend to spl_autoload_register(). (Etienne)
  . Added FixedArray. (Etienne, Tony)
  . Added delaying exceptions in SPL's autoload mechanism. (Marcus)
  . Added RecursiveTreeIterator. (Arnaud, Marcus)
  . Added MultipleIterator. (Arnaud, Marcus, Johannes)

- Improved Zend Engine:
  . Added "compact" handler for Zend MM storage. (Dmitry)
  . Added "+" and "*" specifiers to zend_parse_parameters(). (Andrei)
  . Added concept of "delayed early binding" that allows opcode caches to
    perform class declaration (early and/or run-time binding) in exactly
    the same order as vanilla PHP. (Dmitry)

- Added new date/time functionality: (Derick)
  . date_parse_from_format(): Parse date/time strings according to a format.
  . date_create_from_format()/DateTime::createFromFormat(): Create a date/time